--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,10 @@
   align-items: center;
   justify-content: center;
   z-index: 9999;
-  
+
   background-color: rgba(0, 0, 0, 0.171);
+}
+.form-btn {
+  width: 250px !important;
+  margin-top: 30px !important;
 }
